	    And a sane handling of a game by its caller is now realized.
	    Now more chain: subsim -> game -> user_interface -> resultmenu
	    In short: the whole structure is saner, it is similar to that in
	    ADVSE
	  - more widget usage: menues historical/custom mission, results,
	    game options
	  - added all scanned images that were resting in some data folder

2003-12-25  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* version number increased to 0.0.15
	* first bits of widget usage:
	  display results in subsim, not in game, using widgets
	* bug in torpedo handling found, but not in code (not searched yet)

2003-12-23  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* released 0.0.14

2003-12-22  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* uploaded dangerdeep.dsw/dsp files to compile
	  dftd, adapted tinyxml.h
	* used SDL_GL_GetProcAddress for OpenGL extensions instead
	  of wgl/glx functions.
	* user_interface.cpp
	  - used automatic OpenGL texture coordinate generation to save
	    space (display lists are smaller)

2003-12-17  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* several files:
	  - restored win32 compilability
	* ocean_wave_generator.h
	  - bugfixes.

2003-12-15  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - new bump mapped water.

2003-12-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* user_interface.cpp ocean_wave_generator.h
	  - more realistic water display.
	    (will compile with opengl1.3+ only - no windows for now,
	     maybe incorporate OglExt lib here)

2003-12-14  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* user_interface.cpp ocean_wave_generator.h
	  - added computation for water surface normals.
	  - added computation for choppy waves.
	  - some bugfixes.
	  - correct wave height and normal computation.

2003-12-08  Thorsten Jordan  <thorsten_jordan@gmx.de>
	* user_interface.cpp
	  - made use of new ocean wave generator for distant water
	    simulation (pseudo bump maps)
	  - and also for water display lists.