@@ -47,7 +47,7 @@ image *titlebackgrimg, *periscope, *threesubsimg, *damage_screen_background,
 
 void init_global_data(void)
 {
-	skyhemisphere = new model(get_model_dir() + "skyhemisphere.3ds");
+	skyhemisphere = new model(get_model_dir() + "skyhemisphere.3ds", false);
 	water = new texture(get_texture_dir() + "water.png", GL_LINEAR_MIPMAP_LINEAR);
 	the_moon = new texture(get_texture_dir() + "themoon.png", GL_LINEAR);
 	the_sun = new texture(get_texture_dir() + "thesun.png", GL_LINEAR);
