@@ -99,10 +99,12 @@ void run_game(game* gm)
 				break;
 		} else {
 			widget woptions(0, 0, 1024, 768, texts::get(29), 0, depthchargeimg);
-			woptions.add_child(new widget_func_button<void (*)(void)>(menu_notimplemented, 312, 244, 400, 40, texts::get(118)));
-			woptions.add_child(new widget_func_button<void (*)(void)>(menu_notimplemented, 312, 324, 400, 40, texts::get(119)));
-			woptions.add_child(new widget_caller_arg_button<widget, void (widget::*)(int), int>(&woptions, &widget::close, 1, 312, 404, 400, 40, texts::get(120)));
-			woptions.add_child(new widget_caller_arg_button<widget, void (widget::*)(int), int>(&woptions, &widget::close, 2, 312, 484, 400, 40, texts::get(121)));
+			widget_menu* wmn = new widget_menu(312, 260, 400, 40, false);
+			woptions.add_child(wmn);
+			wmn->add_entry(texts::get(118), new widget_func_button<void (*)(void)>(menu_notimplemented));
+			wmn->add_entry(texts::get(119), new widget_func_button<void (*)(void)>(menu_notimplemented));
+			wmn->add_entry(texts::get(120), new widget_caller_arg_button<widget, void (widget::*)(int), int>(&woptions, &widget::close, 1));
+			wmn->add_entry(texts::get(121), new widget_caller_arg_button<widget, void (widget::*)(int), int>(&woptions, &widget::close, 2));
 			unsigned sel = woptions.run();
 			if (sel == 1)
 				break;
