@@ -24,7 +24,7 @@ using namespace std;
 class system
 {
 public:
-	enum button_type { left_button=0x1, right_button=0x2, middle_button=0x4 };
+	enum button_type { left_button=0x1, right_button=0x2, middle_button=0x4, wheel_up=0x8, wheel_down=0x10 };
 	system(double nearz_, double farz_, unsigned res=640, bool fullscreen=true);
 	~system();
 	void swap_buffers(void);
@@ -97,7 +97,8 @@ private:
 	unsigned res_x_2d, res_y_2d;	// real resolution (depends on user settings)
 	
 	queue<SDL_keysym> keyqueue;
-	int mouse_xrel, mouse_yrel, mouse_x, mouse_y, mouse_b;
+	int mouse_xrel, mouse_yrel, mouse_x, mouse_y;
+	int mouse_b;
 	
 	static system* instance;
 
